--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-python-telegram-bot==13.15
-yfinance==0.2.36
-pandas==2.2.2
-openai
-yfinance
-pytz
-requests
+python-telegram-bot==20.3
+openai==1.3.5
+requests==2.31.0
