--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-
-python-telegram-bot==20.7
-python-dotenv
-openai>=1.0.0
-pytz
+openai==1.3.5
 requests
+python-dotenv
+python-telegram-bot==20.7
+pytz
